Creates Keyboard on mobile, attempt 1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div id="letter-display" class="display"></div>
     <div id="face-display" class="display"></div>
+    <input id="hidden-input" autocomplete="off" autofocus style="opacity: 0; position: absolute;">
 
     <script src="script.js"></script>
 </body>
