--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Letter Hunt</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="letter-display" class="display"></div>
-    <div id="face-display" class="display"></div>
-    <input id="hidden-input" autocomplete="off" autofocus style="opacity: 0; position: absolute;">
-
+    <main>
+        <div id="letter-display" class="display"></div>
+        <div id="face-display" class="display"></div>
+        <input id="hidden-input" autocomplete="off" autofocus>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
